--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
     ],
     "configure": [
       "vendor/vaizard/glued-lib/src/Scripts/initpaths.sh",
-      "Glued\\Config\\ComposerHooks::configTool",
+      "Glued\\Lib\\ComposerHooks::configTool",
       "vendor/vaizard/glued-lib/src/Scripts/cacheroutes.sh"
     ],
     "migrate": [
