--- a/glued/Config/Nginx/snippets/location/glued-stor.conf
+++ b/glued/Config/Nginx/snippets/location/glued-stor.conf
@@ -5,4 +5,9 @@ location /api/stor/ {
     proxy_set_header           X-Original-URI $request_uri;
     proxy_ssl_protocols        TLSv1.3;
     proxy_next_upstream        error timeout http_500;
+    client_max_body_size       8000M;
+    proxy_read_timeout         1800s;
+    proxy_send_timeout         1800s;
+    client_header_timeout      1800s;
+    client_body_timeout        1800s;
 }
