reconfigure php-fpm on install, give status of devices/mounts

--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,10 @@
     "nginx": [
       "vendor/vaizard/glued-lib/src/Scripts/nginx.sh",
       "Glued\\Lib\\ComposerHooks::generateNginx",
-      "vendor/vaizard/glued-lib/src/Scripts/nginx-reload.sh"
+      "vendor/vaizard/glued-lib/src/Scripts/nginx-reload.sh",
+      "vendor/vaizard/glued-lib/src/Scripts/php-fpm.sh",
+      "Glued\\Lib\\ComposerHooks::generatePHPFPM",
+      "vendor/vaizard/glued-lib/src/Scripts/php-fpm-reload.sh"
     ],
     "post-install-cmd": [
       "composer configure || echo \"[FAIL] Failed to configure glued. Please make sure all env variables are set. Rerun composer configure.\"",
@@ -117,7 +120,8 @@
   "config": {
     "allow-plugins": {
       "ergebnis/composer-normalize": true,
-      "foxy/foxy": true
+      "foxy/foxy": true,
+      "php-http/discovery": true
     }
   }
 }
