--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "ext-apcu": "*",
     "ext-bcmath": "*",
     "ext-curl": "*",
@@ -23,20 +23,20 @@
     "ext-soap": "*",
     "ext-xml": "*",
     "facile-it/php-openid-client": "dev-master",
-    "foxy/foxy": "^v1.2.1",
+    "foxy/foxy": "^v1.3",
     "geocoder-php/geoip2-provider": "^4",
-    "guzzlehttp/psr7": "^1",
+    "guzzlehttp/psr7": "^2",
     "http-interop/http-factory-guzzle": "^1",
     "league/flysystem": "^3",
     "middlewares/trailing-slash": "^2",
-    "monolog/monolog": "^2",
+    "monolog/monolog": "^3",
     "nyholm/psr7": "^1",
     "opis/json-schema": "^2",
-    "php-di/php-di": "^6",
+    "php-di/php-di": "^7",
     "php-http/guzzle7-adapter": "^1",
     "php-http/message": "^1",
     "phpfastcache/phpfastcache": "^9",
-    "sabre/event": "^5",
+    "sabre/event": "^6",
     "slim/http": "^1",
     "slim/slim": "^4",
     "symfony/mailer": "^6",
@@ -93,12 +93,14 @@
       "vendor/vaizard/glued-lib/src/Scripts/migrate.sh"
     ],
     "nginx": [
+      "patch -s --reject-file=/dev/null -p1 vendor/monolog/monolog/src/Monolog/Logger.php < vendor/vaizard/glued-lib/src/Patches/Logger.patch",
       "vendor/vaizard/glued-lib/src/Scripts/nginx.sh",
       "Glued\\Lib\\ComposerHooks::generateNginx",
       "vendor/vaizard/glued-lib/src/Scripts/nginx-reload.sh",
       "vendor/vaizard/glued-lib/src/Scripts/php-fpm.sh",
       "Glued\\Lib\\ComposerHooks::generatePHPFPM",
-      "vendor/vaizard/glued-lib/src/Scripts/php-fpm-reload.sh"
+      "vendor/vaizard/glued-lib/src/Scripts/php-fpm-reload.sh",
+      "patch -sR --reject-file=/dev/null -p1 vendor/monolog/monolog/src/Monolog/Logger.php < vendor/vaizard/glued-lib/src/Patches/Logger.patch"
     ],
     "post-install-cmd": [
       "composer configure || echo \"[FAIL] Failed to configure glued. Please make sure all env variables are set. Rerun composer configure.\"",
@@ -108,6 +110,7 @@
     "post-update-cmd": [
       "composer configure || echo \"[FAIL] Failed to configure glued. Please make sure all env variables are set. Rerun composer configure.\"",
       "composer migrate",
+      "patch -s --reject-file=/dev/null -p1 vendor/monolog/monolog/src/Monolog/Logger.php < vendor/vaizard/glued-lib/src/Patches/Logger.patch",
       "echo \"Run 'composer nginx' manually to pick restart this microservice\""
     ],
     "settings": [
