--- a/glued/Config/Nginx/snippets/location/glued-stor.conf
+++ b/glued/Config/Nginx/snippets/location/glued-stor.conf
@@ -8,4 +8,18 @@ location /api/stor/ {
     client_max_body_size       8000M;
     proxy_read_timeout         1800s;
     proxy_send_timeout         1800s;
+
+    # 
+    location /api/stor/v1/links/ {
+        add_header Content-Security-Policy "upgrade-insecure-requests" always;
+        proxy_pass https://stor/api/stor/v1/links/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_ssl_protocols TLSv1.3;
+        proxy_next_upstream error timeout http_500;
+        client_max_body_size 8000M;
+        proxy_read_timeout 1800s;
+        proxy_send_timeout 1800s;
+    }
 }
