fix object meta search, add object delete, fix routing redirect, updt nginx config

--- a/glued/Config/routes.yaml
+++ b/glued/Config/routes.yaml
@@ -11,6 +11,7 @@ routes:
         pattern:    /api/stor
         label:      stor
         dscr:       A routegroup, no methods here.
+        provides:   ingress
 
     #########################################################
     # STOR / HEALTH                                         #
